# rem0te

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
admin/: index.html  package.json
admin/src/: App.tsx  index.css
admin/src/components/: AuthContext.tsx  Layout.tsx
admin/src/pages/: Dashboard.tsx  FileTransfers.tsx  Login.tsx  Peers.tsx  Settings.tsx  Users.tsx
client/: index.html  package.json  tailwind.config.js
client/src/: App.tsx  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: capture.rs  connection.rs  file_transfer.rs  main.rs  native_viewer.rs  relay_client.rs
client/src/pages/: ConnectView.tsx  FileTransferView.tsx  RemoteView.tsx
crates/client/: Cargo.toml
crates/client/src/: config.rs  main.rs  signaling.rs
crates/client/src/capture/: linux.rs  macos.rs  mod.rs
crates/client/src/input/: linux.rs  macos.rs  mod.rs
crates/client/src/video/: mod.rs
crates/client/src/webrtc/: mod.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs  routes.rs  signaling.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
flutter_client/: .metadata  README.md  pubspec.yaml
flutter_client/.dart_tool/: package_config.json  package_graph.json
flutter_client/lib/: main.dart
flutter_client/lib/pages/: connect_page.dart  remote_page.dart
flutter_client/lib/services/: relay_service.dart  signaling_service.dart
flutter_client/linux/: CMakeLists.txt
flutter_client/linux/runner/: my_application.cc
flutter_client/macos/Runner.xcodeproj/: project.pbxproj
flutter_client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_client/macos/Runner/Configs/: AppInfo.xcconfig
server/: Cargo.toml  Dockerfile
server/src/: api.rs  config.rs  main.rs  relay.rs  signaling.rs
server/src/api/: auth.rs  connections.rs  file_transfer.rs  users.rs
target_cli/: Cargo.toml
target_cli/src/: capture.rs  main.rs  relay.rs  signaling.rs
web/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web/src/: App.vue
web/src/assets/: main.css
web/src/components/: ConnectionDialog.vue  ControlBar.vue  RemoteScreen.vue  StatusIndicator.vue
web/src/composables/: useSignaling.ts  useWebRTC.ts
web/src/types/: protocol.ts
