[package]
name = "rem0te-target"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = "0.24"
tungstenite = "0.24"
futures-util = "0.3"
uuid = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
image = "0.25"
mozjpeg = "0.10"
base64 = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2"
x11rb = { version = "0.13", features = ["allow-unsafe-code", "resource_manager", "xinput"] }
