[package]
name = "rem0te-target"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = "0.24"
tungstenite = "0.24"
futures-util = "0.3"
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
