[package]
name = "rem0te-client"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.24"
tungstenite = "0.24"
futures-util = "0.3"
uuid = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
base64 = "0.22"
image = "0.25"
mozjpeg = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2"
x11rb = { version = "0.13", features = ["allow-unsafe-code", "resource_manager", "xinput"] }

[features]
default = ["custom-protocol"]
custom-protocol = []
