[package]
name = "rem0te-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Enable on real Linux for PipeWire/GStreamer capture + evdev input.
# Requires: libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev libglib2.0-dev
linux-media = ["gstreamer", "gstreamer-app", "gstreamer-video", "ashpd", "evdev"]

[dependencies]
rem0te-shared = { path = "../shared" }

# Async runtime
tokio.workspace = true

# WebSocket client for signaling
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# WebRTC
webrtc = "0.11"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Identifiers
uuid.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# CLI
clap = { version = "4", features = ["derive", "env"] }

# System info
hostname = "0.4"

# Image processing
image = "0.25"
bytes = "1"

# ---------------------------------------------------------------------------
# Platform-specific dependencies
# ---------------------------------------------------------------------------

[target.'cfg(target_os = "linux")'.dependencies]
# All Linux deps are optional — enable with: cargo build --features linux-media
# Install system libs first: sudo apt install libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev libglib2.0-dev pkg-config
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }
ashpd = { version = "0.10", features = ["tokio", "pipewire"], optional = true }
evdev = { version = "0.12", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# CoreGraphics for screen capture & input
core-graphics = { version = "0.24", features = ["highsierra", "elcapitan"] }
core-foundation = "0.10"

# Optional: ScreenCaptureKit via objc bindings
objc2 = "0.5"
objc2-foundation = "0.2"
block2 = "0.5"
