[package]
name = "rem0te-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["x11-capture"]
# GStreamer/PipeWire for Wayland (needs system libs)
linux-media = ["gstreamer", "gstreamer-app", "gstreamer-video", "ashpd", "evdev"]
# X11 screen capture (pure Rust, default on Linux)
x11-capture = ["x11rb"]

[dependencies]
rem0te-shared = { path = "../shared" }

# Async runtime
tokio.workspace = true

# WebSocket client for signaling (rustls = pure Rust TLS, no system deps)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# WebRTC
webrtc = "0.11"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Identifiers
uuid.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# CLI
clap = { version = "4", features = ["derive", "env"] }

# System info
hostname = "0.4"

# Utilities
bytes = "1"

# AV1 video encoding (pure Rust, no system deps)
# disable "asm" → no NASM required; keep "threading" for multi-core performance
rav1e = { version = "0.8", default-features = false, features = ["threading"] }
v_frame = "0.3"

# ---------------------------------------------------------------------------
# Platform-specific dependencies
# ---------------------------------------------------------------------------

[target.'cfg(target_os = "linux")'.dependencies]
# GStreamer (optional, for Wayland PipeWire capture)
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }
ashpd = { version = "0.10", features = ["tokio", "pipewire"], optional = true }
evdev = { version = "0.12", optional = true }

# X11 capture (pure Rust)
x11rb = { version = "0.13", optional = true, features = ["allow-unsafe-code", "xtest", "shm"] }

# SHM syscalls for fast X11 capture
libc = "0.2"

# Input injection (uses XTest via x11rb — already included)

[target.'cfg(target_os = "macos")'.dependencies]
# CoreGraphics for screen capture & input
core-graphics = { version = "0.24", features = ["highsierra", "elcapitan"] }
core-foundation = "0.10"

# Optional: ScreenCaptureKit via objc bindings
objc2 = "0.5"
objc2-foundation = "0.2"
block2 = "0.5"
