[package]
name = "rem0te-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rem0te-shared = { path = "../shared" }

# Async runtime
tokio.workspace = true

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower = "0.4"

# WebSocket utilities
futures-util = "0.3"

# Concurrent data structures
dashmap = "6"
tokio-stream = "0.1"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Identifiers
uuid.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

# CLI
clap = { version = "4", features = ["derive", "env"] }
